--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     .hero {
       text-align: center;
       padding: 80px 20px;
-      background: url("https://images.unsplash.com/photo-1521791136064-7986c2920216") no-repeat center/cover;
+      background: url("hero.jpg") no-repeat center/cover;
       color: white;
       animation: fadeIn 1.5s ease-in-out;
     }
