--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -146,6 +147,32 @@
   </div>
 </section>
 
+<section id="testimonials">
+  <h2>What Our Clients Say</h2>
+  <div class="features">
+    <div class="card">
+      <img src="people.png" alt="Client 1" style="width:80px;height:80px;border-radius:50%;margin-bottom:10px;object-fit:cover;">
+        <p>"Karthik, Thank you for helping to withdraw my PF money. I got my PF money as you committed to me. Your support is excellent, and your commitment is remarkable."</p>
+        <strong>- Anil Kashyap</strong>
+    </div>
+    <div class="card">
+      <img src="people.png" alt="Client 2" style="width:80px;height:80px;border-radius:50%;margin-bottom:10px;object-fit:cover;">
+        <p>"Aa Gaye mere paise aaye lekin akdam sahi samay par aaye hai. Aapka bahut bahut shukriya sir. 2 saal se yeh pending tha ...aapne kar diye"</p>
+        <strong>- Pooja</strong>
+    </div>
+    <div class="card">
+      <img src="people.png" alt="Client 3" style="width:80px;height:80px;border-radius:50%;margin-bottom:10px;object-fit:cover;">
+        <p>"Thank u soo much for giving me his reference. He has done my work within 1 day. He was so quick!. Naam change hogya on pf yaar itna pareshan thina. Since 3 yrs I was behind my HRs but nobody was ready to do"</p>
+        <strong>- Anam</strong>
+    </div>
+    <div class="card">
+      <img src="people.png" alt="Client 4" style="width:80px;height:80px;border-radius:50%;margin-bottom:10px;object-fit:cover;">
+        <p>"I have been struggling with this since 2020. I can't be thankful enough for what you di"</p>
+        <strong>- Abhishek</strong>
+    </div>
+  </div>
+</section>
+
 <section id="contact">
   <h2>Contact Us</h2>
   <p>📞 Phone: <a href="tel:9833840279">+91 9833840279</a></p>
@@ -161,6 +188,6 @@
   <a href="https://wa.me/919833840279" target="_blank"><i class="fab fa-whatsapp"></i></a>
   <a href="tel:9833840279" class="call"><i class="fa fa-phone"></i></a>
 </div>
-
 </body>
 </html>
+
